implment sign up

--- a/skylog/public/index.html
+++ b/skylog/public/index.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="utf-8" />
 
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700" rel="stylesheet"/>
     <title>Skylog</title>
+      <!-- Google Sign-In -->
+    <!-- <meta name="google-signin-client_id" content="03312556036-iadcqp28eqijomh10mckbi1r6962vlcv.apps.googleusercontent.com"> -->
+    <!-- <script src="https://apis.google.com/js/api.js"></script> -->
   </head>
   <body>
     <div id="root"></div>
